// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Comment /> should match a snapshot with a complex avatar badge 1`] = `
<div
  className="sc-iwsKbI ghJpUv"
>
  <div
    className="sc-bwzfXH fVTbJN"
  >
    <div
      className="sc-htpNat dEQIYH"
    >
      <div
        className="sc-ifAKCX eOkFuq"
      >
        <svg
          height="25"
          viewBox="0 0 20 20"
          width="25"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="10"
            cy="10"
            fill="#19b4fa"
            r="10"
          />
          <path
            d="M8.232 13.89l.707.706 5.656-5.657-1.414-1.415-4.243 4.243-2.122-2.122-1.414 1.415 2.828 2.83z"
            fill="#fff"
          />
        </svg>
      </div>
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-bxivhb eOJfhC"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-light"
    >
      Custom date
    </span>
  </div>
  <span
    className="sc-gZMcBi hxoBK"
  >
    <div
      className="sc-gqjmRU cyDemO"
    >
      <div
        className="sc-bdVaJa hOgMxB"
      >
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
        >
          Custom name
        </span>
      </div>
      <div
        className="sc-VigVT efojrA"
      >
        <span
          className="k-u-color-font1 k-u-weight-light sc-htoDjs gPUvVR"
        >
          Custom text
        </span>
      </div>
      <span
        className="sc-dnqmqq cigwiU"
      />
    </div>
    
  </span>
</div>
`;

exports[`<Comment /> should match a snapshot with a complex bottom notes 1`] = `
<div
  className="sc-iwsKbI ghJpUv"
>
  <div
    className="sc-bwzfXH fVTbJN"
  >
    <div
      className="sc-htpNat dEQIYH"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-bxivhb eOJfhC"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-light"
    >
      Custom date
    </span>
  </div>
  <span
    className="sc-gZMcBi hxoBK"
  >
    <div
      className="sc-gqjmRU cyDemO"
    >
      <div
        className="sc-bdVaJa hOgMxB"
      >
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
        >
          Custom name
        </span>
      </div>
      <div
        className="sc-VigVT efojrA"
      >
        <span
          className="k-u-color-font1 k-u-weight-light sc-htoDjs gPUvVR"
        >
          Custom text
        </span>
      </div>
      <span
        className="sc-dnqmqq cigwiU"
      />
    </div>
    <div
      className="sc-bdVaJa edDsZV"
    >
      <div
        className="k-u-color-font1 k-u-size-micro k-u-weight-bold sc-jTzLTM fSqnUK"
      >
        <div>
          <a
            href="#"
            style={
              Object {
                "color": "#000",
              }
            }
          >
            Delete this comment
          </a>
          <a
            href="#"
            style={
              Object {
                "color": "#000",
              }
            }
          >
            Notify abuse
          </a>
        </div>
      </div>
    </div>
  </span>
</div>
`;

exports[`<Comment /> should match its empty snapshot 1`] = `
<div
  className="sc-iwsKbI ghJpUv"
>
  <div
    className="sc-bwzfXH fVTbJN"
  >
    <div
      className="sc-htpNat dEQIYH"
    >
      <span
        className="k-ButtonImage k-ButtonImage--withoutPointerEvents sc-bxivhb eOJfhC"
        tabIndex={null}
      >
        <img
          alt="Image alt"
          className="k-ButtonImage__img"
          src="#image"
        />
      </span>
    </div>
    <span
      className="k-u-color-font1 k-u-size-micro k-u-weight-light"
    >
      Custom date
    </span>
  </div>
  <span
    className="sc-gZMcBi hxoBK"
  >
    <div
      className="sc-gqjmRU cyDemO"
    >
      <div
        className="sc-bdVaJa hOgMxB"
      >
        <span
          className="k-u-color-font1 k-u-size-tiny k-u-weight-regular"
        >
          Custom name
        </span>
      </div>
      <div
        className="sc-VigVT eWLelC"
      >
        <span
          className="k-u-color-font1 k-u-weight-light sc-htoDjs gPUvVR"
        >
          Custom text
        </span>
      </div>
      <span
        className="sc-dnqmqq cigwiU"
      />
    </div>
    <div
      className="sc-fjdhpX jfYGMe"
    >
      <button
        aria-pressed="true"
        className="sc-bZQynM erhepU"
        role="button"
      >
        
        <svg
          aria-hidden="true"
          className="sc-gzVnrw cYyNLJ"
          fill="#222"
          focusable="false"
          viewBox="0 0 14 12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <title>
            Heart
          </title>
          <path
            d="M7 2.927C6.71 1.267 5.262.007 3.52.01 1.574.013-.003 1.595 0 3.543 0 4.485.37 5.34.97 5.97l.012.014L7.012 12l5.856-5.88c.698-.646 1.134-1.57 1.132-2.597-.002-1.95-1.582-3.525-3.53-3.523C8.73.002 7.284 1.267 7 2.927z"
          />
        </svg>
        4
      </button>
    </div>
    
  </span>
</div>
`;
